fix clipping on h3

--- a/css/kjh-custom.css
+++ b/css/kjh-custom.css
@@ -81,7 +81,7 @@ h1,h2,h3,h4,h5,h6 { font-weight: normal; color: #2222; }
 
 h1 {text-transform: uppercase; font: 72px/72px 'LeagueGothicRegular', 'Calibri', Verdana, sans-serif; letter-spacing: 1; margin-bottom: 0.1em; color:#DD4A40; } /*LBG Red*/ 
 h2 {font: 42px/48px 'LeagueGothicRegular', 'Calibri', Verdana, sans-serif; letter-spacing: 0; line-height: 1.5; margin-bottom: 0.25em; color:#4444; }
-h3 {font: 36px/42px 'LeagueGothicRegular', 'Calibri', Verdana, sans-serif; letter-spacing: 0; line-height: 1; margin-bottom: 0.2em; color:#4444; }
+h3 {font: 36px/42px 'LeagueGothicRegular', 'Calibri', Verdana, sans-serif;  margin-top: 0.2em; letter-spacing: 0; line-height: 1; margin-bottom: 0.2em; color:#4444; }
 h4 {font: 36px/42px 'LeagueGothicRegular', Helvetica, sans-serif; margin-top: 0.2em; margin-bottom: 1.25em; line-height: 1; color:#DD4A40;}
 h5 { font-size: 1.2em; font-weight: normal; line-height: 1.25; margin-bottom: 1.25em; color:#2222;}
 h6 { font-size: 1em; font-weight: bold; margin-bottom: 1.1em;}
